[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/GameUI.gd" type="Script" id=1]
[ext_resource path="res://media/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.36
anchor_right = 0.64
anchor_bottom = 0.05
margin_right = -576.0
margin_bottom = -608.0

[node name="Label_Score" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 120.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Score: "
align = 1
valign = 1

[node name="Label_Health" type="Label" parent="Control"]
margin_top = 16.0
margin_right = 50.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Health: "

[node name="Control2" type="Control" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "W/S/A/D: Move
Right Clickt Click: Grab bullets
Left Click: Shoot all grabbed bullets"
align = 1
valign = 1
